--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,7 @@ script:
 deploy:
   provider: elasticbeanstalk
   access_key_id: $ACCESS_KEY
-  secret_access_key:
-    secure: $SECRET_ACCESS_KEY
+  secret_access_key: $SECRET_ACCESS_KEY
   region: "us-east-1"
   app: "helloworld"
   env: "Helloworld-env"
